[package]
name = "dstream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version="1", features=["time"]}
linked-hash-map = "0.5.4"

[dev-dependencies]
rand = "0.8"
tokio = {version="1", features=["rt", "macros"]}
